--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^7.0.0",
     "@swimlane/ngx-datatable": "^20.1.0",
     "ionicons": "^7.0.0",
+    "ng-angular-popup": "^0.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
